--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <h1>우리랑 아기랑</h1>
     <nav>
         <ul>
-            <li><a href="#">홈</a></li>
-            <li><a href="#">소개</a></li>
-            <li><a href="#">서비스</a></li>
-            <li><a href="#">연락처</a></li>
+            <li><a href="#">Check With Us</a></li>
+            <li><a href="#">Talk With Us</a></li>
+            <li><a href="#">Record With Us</a></li>
+            <li><a href="#">Contact With Us</a></li>
+            <li><a href="#" >img_mypage</a></li>
+            <li><a href="#">img_logOut</a></li>
         </ul>
     </nav>
 </header>
@@ -24,6 +26,13 @@
         <p>메인 화면</p>
     </section>
 </main>
+<div>
+    <div class="baby_looks_like_bean">
+        <p>태명: "String"</p>
+        <p>D - "String"</p>
+<!--        <img src="img_baby_looks">-->
+    </div>
+</div>
 <footer>
     <p>&copy; Baby With Us</p>
 </footer>
