--- a/index.html
+++ b/index.html
@@ -11,48 +11,66 @@
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Oleo+Script+Swash+Caps:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="logo">
-            <a href="index.html">우리랑 아기랑</a>
+<nav class="navbar">
+    <div class="logo">
+        <a href="index.html"><span class="orangeColoredAlaphabet">우리</span>랑 <span class="orangeColoredAlaphabet">아기</span>랑<br></a>
+        <a1 href="index.html"><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a1>
+    </div>
+    <div class="nav-links">
+        <div>
+            <a href="check.html">Check<br> With Us</a>
         </div>
-        <div class="nav-links">
-            <a href="check.html">Check With Us</a>
-            <a href="talk.html">Talk With Us</a>
-            <a href="record.html">Record With Us</a>
-            <a href="contact.html">Contact With Us</a>
-            <span class="account-icon">👤</span>
-            <span class="logout-icon">🚪</span>
+        <div>
+            <a href="talk.html">Talk<br> With Us</a>
         </div>
-    </nav>
-
+        <div>
+            <a href="record.html">Record<br> With Us</a>
+        </div>
+        <div class="CWU">
+            <a href="contact.html">Contact<br> With Us</a>
+        </div>
+        <div class="nav-img">
+            <img src="images/mypage.png" class="account-icon">
+            <img src="images/logout.png" class="logout-icon">
+        </div>
+    </div>
+</nav>
+<div class="mainContents">
+    <div class="category baby" id="babyInfo">
+        <h2>또복이</h2>
+        <p1><span class="orangeColoredAlaphabet">D - 189</span><br></p1>
+        <p1><br>신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</p1>
+    </div>
     <div class="categories">
-        <div class="category baby" id="babyInfo">
-            <h2>또복이</h2>
-            <p>D - 189</p>
-            <p>신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</p>
-        </div>
+        <!--        <div class="categories mom and dad" id="momAndDad">-->
         <div class="category mom" id="momInfo">
-            <h2>엄마랑</h2>
-            <p>Baby With Mom</p>
-            <img src="images/mom.png" alt="엄마 아이콘">
+            <div>
+                <h2><span class="orangeColoredAlaphabet">엄마</span>랑</h2>
+                <p><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">M</span>om</p>
+            </div>
+            <img src="images/mom.png" alt="엄마 아이콘" class="momsIcon">
         </div>
         <div class="category dad" id="dadInfo">
-            <h2>아빠랑</h2>
-            <p>Baby With Dad</p>
-            <img src="images/dad.png" alt="아빠 아이콘">
+            <div>
+                <h2><span class="orangeColoredAlaphabet">아빠</span>랑</h2>
+                <p><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">D</span>ad</p>
+            </div>
+            <img src="images/dad.png" alt="아빠 아이콘" class="dadsIcon">
         </div>
     </div>
+</div>
 
-    <div class="content">
-        <div class="info yellow-info">신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</div>
-        <div class="info pink-info">엄마와 아기의 소통 방법에 대해 알아보세요!</div>
-        <div class="info blue-info">아빠와의 유대감을 키우는 방법입니다!</div>
-    </div>
 
-    <footer>
-        <p>한국항공대학교 멋쟁이사자처럼 12기 천상천하 육아도움좀</p>
-    </footer>
+<div class="content">
+    <div class="info yellow-info">신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</div>
+    <div class="info pink-info">엄마와 아기의 소통 방법에 대해 알아보세요!</div>
+    <div class="info blue-info">아빠와의 유대감을 키우는 방법입니다!</div>
+</div>
 
-    <script src="js/scripts.js"></script>
+<footer>
+    <p>한국항공대학교 멋쟁이사자처럼 12기 천상천하 육아도움좀</p>
+</footer>
+
+<script src="js/scripts.js"></script>
 </body>
 </html>
