--- a/contact.html
+++ b/contact.html
@@ -3,25 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Check With Us</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <title>Contact With Us</title>
+    <link rel="stylesheet" type="text/css" href="css/contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Oleo+Script+Swash+Caps:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100..900&family=Oleo+Script+Swash+Caps:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar">
     <div class="logo">
-        <a href="index.html">우리랑 아기랑</a>
+        <a href="index.html"><span class="orangeColoredAlaphabet">우리</span>랑 <span class="orangeColoredAlaphabet">아기</span>랑<br></a>
+        <a1 href="index.html"><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a1>
     </div>
     <div class="nav-links">
-        <a href="check.html">Check With Us</a>
-        <a href="talk.html">Talk With Us</a>
-        <a href="record.html">Record With Us</a>
-        <a href="contact.html">Contact With Us</a>
-        <span class="account-icon">👤</span>
-        <span class="logout-icon">🚪</span>
+        <div>
+            <a href="check.html">Check<br> With Us</a>
+        </div>
+        <div>
+            <a href="talk.html">Talk<br> With Us</a>
+        </div>
+        <div>
+            <a href="record.html">Record<br> With Us</a>
+        </div>
+        <div class="CWU">
+            <a href="contact.html">Contact<br> With Us</a>
+        </div>
+        <div class="nav-img">
+            <img src="images/mypage.png" class="account-icon">
+            <img src="images/logout.png" class="logout-icon">
+        </div>
     </div>
 </nav>
 
