--- a/html/contact.html
+++ b/html/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baby With Us</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <title>Contact With Us</title>
+    <link rel="stylesheet" type="text/css" href="../css/contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
@@ -38,42 +38,16 @@
         </div>
     </div>
 </nav>
-<div class="mainContents">
-    <div class="category baby" id="babyInfo">
-        <h2>또복이</h2>
-        <p1><span class="orangeColoredAlaphabet">D - 189</span><br></p1>
-        <p1><br>신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</p1>
-    </div>
-    <div class="categories">
-        <!--        <div class="categories mom and dad" id="momAndDad">-->
-        <div class="category mom" id="momInfo">
-            <div>
-                <h2><span class="orangeColoredAlaphabet">엄마</span>랑</h2>
-                <p><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">M</span>om</p>
-            </div>
-            <img src="images/mom.png" alt="엄마 아이콘" class="momsIcon">
-        </div>
-        <div class="category dad" id="dadInfo">
-            <div>
-                <h2><span class="orangeColoredAlaphabet">아빠</span>랑</h2>
-                <p><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">D</span>ad</p>
-            </div>
-            <img src="images/dad.png" alt="아빠 아이콘" class="dadsIcon">
-        </div>
-    </div>
-</div>
-
 
 <div class="content">
-    <div class="info yellow-info">신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</div>
-    <div class="info pink-info">엄마와 아기의 소통 방법에 대해 알아보세요!</div>
-    <div class="info blue-info">아빠와의 유대감을 키우는 방법입니다!</div>
+    <h1>Contact With Us 화면</h1>
+    <p>Contact With Us에 대한 내용</p>
 </div>
 
 <footer>
     <p>한국항공대학교 멋쟁이사자처럼 12기 천상천하 육아도움좀</p>
 </footer>
 
-<script src="js/scripts.js"></script>
+<script src="../js/scripts.js"></script>
 </body>
 </html>
