--- a/html/talk.html
+++ b/html/talk.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Record With Us</title>
-    <link rel="stylesheet" type="text/css" href="css/record.css">
+    <title>Talk With Us</title>
+    <link rel="stylesheet" type="text/css" href="../css/talk.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
@@ -40,14 +40,14 @@
 </nav>
 
 <div class="content">
-    <h1>Record With Us 화면</h1>
-    <p>Record With Us에 대한 내용</p>
+    <h1>Talk With Us 화면</h1>
+    <p>Talk With Us에 대한 내용</p>
 </div>
 
 <footer>
     <p>한국항공대학교 멋쟁이사자처럼 12기 천상천하 육아도움좀</p>
 </footer>
 
-<script src="js/scripts.js"></script>
+<script src="../js/scripts.js"></script>
 </body>
 </html>
