--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <a1 href="index.html"><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a1>
     </div>
     <div class="nav-links">
-        <div>
-            <a href="check.html">Check<br> With Us</a>
+        <div class="check">
+            <a href="check.html"><span class="orangeColoredAlaphabet">C</span>heck<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
         </div>
-        <div>
-            <a href="talk.html">Talk<br> With Us</a>
+        <div class="talk">
+            <a href="talk.html"><span class="orangeColoredAlaphabet">T</span>alk<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
         </div>
-        <div>
-            <a href="record.html">Record<br> With Us</a>
+        <div class="record">
+            <a href="record.html"><span class="orangeColoredAlaphabet">R</span>ecord<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
         </div>
-        <div class="CWU">
-            <a href="contact.html">Contact<br> With Us</a>
+        <div class="contact">
+            <a href="contact.html"><span class="orangeColoredAlaphabet">C</span>ontact<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
         </div>
         <div class="nav-img">
             <img src="images/mypage.png" class="account-icon">
