--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a1 href="index.html"><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a1>
     </div>
     <div class="nav-links">
+        <div class="menus">
         <div class="check">
             <a href="check.html"><span class="orangeColoredAlaphabet">C</span>heck<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
         </div>
@@ -32,9 +33,10 @@
         <div class="contact">
             <a href="contact.html"><span class="orangeColoredAlaphabet">C</span>ontact<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
         </div>
+        </div>
         <div class="nav-img">
             <img src="images/mypage.png" class="account-icon">
-            <img src="images/logout.png" class="logout-icon">
+            <img src="images/logout.png" class="logout-icon" style="margin-left: 30px">
         </div>
     </div>
 </nav>
