Revert "MainPage Design 99%"
This reverts commit 4cd8291cf298dba9f7bf3e9ab5c4985c09e0e342.

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <h2>또복이</h2>
         <p1><span class="orangeColoredAlaphabet">D - 189</span><br></p1>
         <p1><br>신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</p1>
-        <img class="baby-img" src="images/baby.png">
     </div>
     <div class="categories">
+        <!--        <div class="categories mom and dad" id="momAndDad">-->
         <div class="category mom" id="momInfo">
             <div>
                 <h2><span class="orangeColoredAlaphabet">엄마</span>랑</h2>
