--- a/html/index.html
+++ b/html/index.html
@@ -20,21 +20,23 @@
         <a1 href="index.html"><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a1>
     </div>
     <div class="nav-links">
-        <div>
-            <a href="check.html">Check<br> With Us</a>
-        </div>
-        <div>
-            <a href="talk.html">Talk<br> With Us</a>
-        </div>
-        <div>
-            <a href="record.html">Record<br> With Us</a>
-        </div>
-        <div class="CWU">
-            <a href="contact.html">Contact<br> With Us</a>
+        <div class="menus">
+            <div class="check">
+                <a href="check.html"><span class="orangeColoredAlaphabet">C</span>heck<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
+            </div>
+            <div class="talk">
+                <a href="talk.html"><span class="orangeColoredAlaphabet">T</span>alk<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
+            </div>
+            <div class="record">
+                <a href="record.html"><span class="orangeColoredAlaphabet">R</span>ecord<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
+            </div>
+            <div class="contact">
+                <a href="contact.html"><span class="orangeColoredAlaphabet">C</span>ontact<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
+            </div>
         </div>
         <div class="nav-img">
-            <img src="images/mypage.png" class="account-icon">
-            <img src="images/logout.png" class="logout-icon">
+            <img src="../images/mypage.png" class="account-icon">
+            <img src="../images/logout.png" class="logout-icon" style="margin-left: 30px">
         </div>
     </div>
 </nav>
@@ -43,9 +45,9 @@
         <h2>또복이</h2>
         <p1><span class="orangeColoredAlaphabet">D - 189</span><br></p1>
         <p1><br>신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</p1>
+        <img class="baby-img" src="../images/baby.png">
     </div>
     <div class="categories">
-        <!--        <div class="categories mom and dad" id="momAndDad">-->
         <div class="category mom" id="momInfo">
             <div>
                 <h2><span class="orangeColoredAlaphabet">엄마</span>랑</h2>
