--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
         <a href="index.html"><span class="orangeColoredAlaphabet">우리</span>랑 <span class="orangeColoredAlaphabet">아기</span>랑<br></a>
         <a1 href="index.html"><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a1>
     </div>
-    <div class="nav-links">
+<!--    <div class="nav-links">-->
         <div class="menus">
             <div class="check">
                 <a href="check.html"><span class="orangeColoredAlaphabet">C</span>heck<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
@@ -38,7 +38,7 @@
             <img src="../images/mypage.png" class="account-icon">
             <img src="../images/logout.png" class="logout-icon" style="margin-left: 30px">
         </div>
-    </div>
+<!--    </div>-->
 </nav>
 <div class="mainContents">
     <div class="category baby" id="babyInfo">
