--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,6 @@
         <a href="index.html"><span class="orangeColoredAlaphabet">우리</span>랑 <span class="orangeColoredAlaphabet">아기</span>랑<br></a>
         <a1 href="index.html"><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a1>
     </div>
-    <!--    <div class="nav-links">-->
     <div class="menus">
         <div class="check">
             <a href="check.html"><span class="orangeColoredAlaphabet">C</span>heck<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
@@ -34,11 +33,10 @@
             <a href="contact.html"><span class="orangeColoredAlaphabet">C</span>ontact<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
         </div>
     </div>
-    <div class="nav-img">
-        <img src="../images/mypage.png" class="account-icon">
-        <img src="../images/logout.png" class="logout-icon" style="margin-left: 30px">
+    <div class="nav-img" id="nav-img">
+<!--        <img src="../images/mypage.png" class="account-icon">-->
+<!--        <img src="../images/logout.png" class="logout-icon" style="margin-left: 30px">-->
     </div>
-    <!--    </div>-->
 </nav>
 <div class="mainContents">
     <div class="category baby" id="babyInfo">
