--- a/html/index.html
+++ b/html/index.html
@@ -34,8 +34,8 @@
         </div>
     </div>
     <div class="nav-img" id="nav-img">
-<!--        <img src="../images/mypage.png" class="account-icon">-->
-<!--        <img src="../images/logout.png" class="logout-icon" style="margin-left: 30px">-->
+        <img src="../images/mypage.png" class="account-icon">
+        <img src="../images/logout.png" class="logout-icon" style="margin-left: 30px">
     </div>
 </nav>
 <div class="mainContents">
@@ -66,7 +66,11 @@
 
 <div class="content">
     <div class="info yellow-info">신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</div>
-    <div class="info pink-info">엄마와 아기의 소통 방법에 대해 알아보세요!</div>
+    <div class="info pink-info">
+        <a>
+            <p class="smoking">금연 필수!</p>
+        </a>
+    </div>
     <div class="info blue-info">아빠와의 유대감을 키우는 방법입니다!</div>
 </div>
 
