--- a/html/index.html
+++ b/html/index.html
@@ -2,82 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baby With Us</title>
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Oleo+Script+Swash+Caps:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100..900&family=Oleo+Script+Swash+Caps:wght@400;700&display=swap" rel="stylesheet">
+    <title>Title</title>
 </head>
 <body>
-<nav class="navbar">
-    <div class="logo">
-        <a href="index.html"><span class="orangeColoredAlaphabet">우리</span>랑 <span class="orangeColoredAlaphabet">아기</span>랑<br></a>
-        <a1 href="index.html"><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a1>
-    </div>
-    <div class="menus">
-        <div class="check">
-            <a href="check.html"><span class="orangeColoredAlaphabet">C</span>heck<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
-        </div>
-        <div class="talk">
-            <a href="talk.html"><span class="orangeColoredAlaphabet">T</span>alk<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
-        </div>
-        <div class="record">
-            <a href="record.html"><span class="orangeColoredAlaphabet">R</span>ecord<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
-        </div>
-        <div class="contact">
-            <a href="contact.html"><span class="orangeColoredAlaphabet">C</span>ontact<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
-        </div>
-    </div>
-    <div class="nav-img" id="nav-img">
-        <img src="../images/mypage.png" class="account-icon">
-        <img src="../images/logout.png" class="logout-icon" style="margin-left: 30px">
-    </div>
-</nav>
-<div class="mainContents">
-    <div class="category baby" id="babyInfo">
-        <h2>또복이</h2>
-        <p1><span class="orangeColoredAlaphabet">D - 189</span><br></p1>
-        <p1><br>신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</p1>
-        <img class="baby-img" src="../images/baby.png">
-    </div>
-    <div class="categories">
-        <div class="category mom" id="momInfo">
-            <div>
-                <h2><span class="orangeColoredAlaphabet">엄마</span>랑</h2>
-                <p><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">M</span>om</p>
-            </div>
-            <img src="../images/mom.png" alt="엄마 아이콘" class="momsIcon">
-        </div>
-        <div class="category dad" id="dadInfo">
-            <div>
-                <h2><span class="orangeColoredAlaphabet">아빠</span>랑</h2>
-                <p><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">D</span>ad</p>
-            </div>
-            <img src="../images/dad.png" alt="아빠 아이콘" class="dadsIcon">
-        </div>
-    </div>
-</div>
 
-
-<div class="content">
-    <div class="info yellow-info">신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</div>
-    <div class="info pink-info">
-        <a>
-            <p class="smoking">금연 필수!</p>
-        </a>
-    </div>
-    <div class="info blue-info">아빠와의 유대감을 키우는 방법입니다!</div>
-</div>
-
-<footer>
-    <p>한국항공대학교 멋쟁이사자처럼 12기 천상천하 육아도움좀</p>
-</footer>
-
-<script src="../js/scripts.js"></script>
 </body>
 </html>
