--- a/html/record.html
+++ b/html/record.html
@@ -16,7 +16,7 @@
 <body>
 <nav class="navbar">
     <div class="logo">
-        <a href="index.html"><span class="orangeColoredAlaphabet">우리</span>랑 <span class="orangeColoredAlaphabet">아기</span>랑<br></a>
+        <a href="main.html"><span class="orangeColoredAlaphabet">우리</span>랑 <span class="orangeColoredAlaphabet">아기</span>랑<br></a>
         <a1 href="index.html"><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a1>
     </div>
     <div class="nav-links">
