--- a/html/main.html
+++ b/html/main.html
@@ -68,10 +68,28 @@
     <div class="info yellow-info">신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</div>
     <div class="info pink-info">
         <a>
+            <hr class="line">
             <p class="smoking">금연 필수!</p>
+            <p class="smoking_body">흡연은 아이와 산모에 나쁜 영향을 끼칩니다!<br></p>
+            <p class="food">임신 중 피해야하는 음식!</p>
+            <p class="food_body">회, 또는 익히지 않은 동물성 단백질은 기생충이나 세균에 감염이 될 위험이 있습니다!<br>고당도 음료 혹은 카페인이 첨가되거나 알코올이 함유되어 있는 음료는 당연히 태아의 생명을 위험하게 만듭니다, 또한 무알코올 음료중 최대 알코올 함량이 0.5%인 음료도 무알코올 음료로 분류가 되기에, 되도록 무알코올도 조심해주시길 바랍니다!<br>생우유로 만들어진 치즈들을 조심하세요, 일부 치즈들은 살균처리가 되지 않은 생우유로 만들었으며, 이는 태아가 박테리아 세균에 노출될 위험이 발생합니다!</p>
+            <p class="medicine">임신 중 복용할 수 있는 약!</p>
+            <p class="medicine_body">타이레놀 혹은 애드빌와 같은 아스피린성 약물에 함유된 아세트아미노펜은 최소한으로 섭취할 것을 권장합니다, 이 외의 약물들은 꼭 의사의 상담 후 복용하시길 바랍니다!</p>
+            <p class="stress">임신 중 스트레스 관리!</p>
+            <p class="stress_body">신체적인 불편감과 아이에 대한 걱정으로 인해 산모들은 스트레스에 노출되기 쉽습니다. 요가나 명상, 가벼운 산책등을 통해 마음을 다스리는 노력이 필요합니다!</p>
         </a>
     </div>
-    <div class="info blue-info">아빠와의 유대감을 키우는 방법입니다!</div>
+    <div class="info blue-info">
+        <a>
+            <hr class="line">
+            <p class="smoking">금연 필수!</p>
+            <p class="smoking_body">흡연은 아이와 산모에 나쁜 영향을 끼칩니다!<br></p>
+            <p class="plan">경제적 계획 확립해두기</p>
+            <p class="plan_body">출산 후 계획을 세우러면 번거롭고 육아에 의해 정신적으로도 여유가 없을 가능성이 높으며, 시간도 부족할 수 있습니다, 계획을 아이가 태어나기 전에 해두는 것을 적극 권장합니다.</p>
+            <P class="change">아내의 변화에 이해하고 배려해주기</P>
+            <p class="change_body">여성의 경우 임신을 하게 되면 많은 신체적 변화로 인해 평소와 달리 감정적으로 많은 변화가 일어날 수 있습니다, 이런 변화들을 배려하고 이해해주는 멋진 남편이 되어주시길 바랍니다</p>
+        </a>
+    </div>
 </div>
 
 <footer>
