--- a/html/record.html
+++ b/html/record.html
@@ -41,9 +41,80 @@
     </div>
 </nav>
 
-<div class="content">
-    <h1>Record With Us 화면</h1>
-    <p>Record With Us에 대한 내용</p>
+<div class="main">
+    <div class="a">
+        <p class="MyDiaryList_txt">내가 작성한 일기</p>
+        <div class="a_buttons">
+            <button class="ViewOption">
+                VIEW OPTION
+                <img class="ViewOption_img" src="../images/gear.png">
+            </button>
+            <button class="WriteDiary">일기 작성하기</button>
+        </div>
+    </div>
+
+    <div class="b">
+        <div class="DiaryBox">
+            <div class="DiaryRaw">
+                <div class="Diary">
+                    <p class="Diary_date">19</p>
+                    <!--img-->
+                </div>
+                <div class="Diary">
+                    <p class="Diary_date">19</p>
+                    <!--img-->
+                </div>
+                <div class="Diary">
+                    <p class="Diary_date">19</p>
+                    <!--img-->
+                </div>
+            </div>
+            <div class="DiaryRaw">
+                <div class="Diary">
+                    <p class="Diary_date">19</p>
+                    <!--img-->
+                </div>
+                <div class="Diary">
+                    <p class="Diary_date">19</p>
+                    <!--img-->
+                </div>
+                <div class="Diary">
+                    <p class="Diary_date">19</p>
+                    <!--img-->
+                </div>
+            </div>
+            <div class="DiaryRaw">
+                <div class="Diary">
+                    <p class="Diary_date">19</p>
+                    <!--img-->
+                </div>
+                <div class="Diary">
+                    <p class="Diary_date">19</p>
+                    <!--img-->
+                </div>
+                <div class="Diary">
+                    <p class="Diary_date">19</p>
+                    <!--img-->
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="MonthController">
+    <svg class="TriSvg">
+        <polygon class="Tri" points="0,15.6 18,15.6 9,0"></polygon>
+    </svg>
+    <p class="PrevMonth">6</p>
+    <div class="Present">
+        <p class="PresentMonth">7</p>
+        <p class="Month_txt">월</p>
+    </div>
+    <p class="NextMonth">8</p>
+    <svg class="TriSvg">
+        <polygon class="Tri" points="0,0 18,0 9,15.6"></polygon>
+    </svg>
 </div>
 
 <footer>
