--- a/html/main.html
+++ b/html/main.html
@@ -42,7 +42,7 @@
     <div class="category baby" id="babyInfo">
         <h2>또복이</h2>
         <p1><span class="orangeColoredAlaphabet">D - 189</span><br></p1>
-        <p1><br>신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</p1>
+        <p1><br>태아의 점점 모습을 갖추어가고 있어요!</p1>
         <img class="baby-img" src="../images/baby.png">
     </div>
     <div class="categories">
@@ -65,7 +65,12 @@
 
 
 <div class="content">
-    <div class="info yellow-info">신체에 중요한 장기들이 구체적으로 만들어지고 있어요!</div>
+    <div class="info yellow-info">
+        <a>
+            <p class="Mom_info">엄마 정보:</p>
+            <p class="Mom_info_body">자궁의 크기가 조금씩 커지고 체중도 약간 늘어납니다.</p>
+        </a>
+    </div>
     <div class="info pink-info">
         <a>
             <hr class="line">
