--- a/html/DiaryList_MyDiary.html
+++ b/html/DiaryList_MyDiary.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <link href="../../css/DiaryList_MyDiary.css" rel="stylesheet">
+  <link href="../css/DiaryList_MyDiary.css" rel="stylesheet">
 </head>
 <body>
 <div class="main">
@@ -12,7 +12,7 @@
     <div class="a_buttons">
       <button class="ViewOption">
         VIEW OPTION
-        <img class="ViewOption_img" src="../../img/gear-fill.png">
+        <img class="ViewOption_img" src="../images/gear.png">
       </button>
       <button class="WriteDiary">일기 작성하기</button>
     </div>
