--- a/html/record.html
+++ b/html/record.html
@@ -19,26 +19,26 @@
         <a href="main.html"><span class="orangeColoredAlaphabet">우리</span>랑 <span class="orangeColoredAlaphabet">아기</span>랑<br></a>
         <a1 href="index.html"><span class="orangeColoredAlaphabet">B</span>aby <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a1>
     </div>
-    <div class="nav-links">
-        <div class="menus">
-            <div class="check">
-                <a href="check.html"><span class="orangeColoredAlaphabet">C</span>heck<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
-            </div>
-            <div class="talk">
-                <a href="talk.html"><span class="orangeColoredAlaphabet">T</span>alk<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
-            </div>
-            <div class="record">
-                <a href="record.html"><span class="orangeColoredAlaphabet">R</span>ecord<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
-            </div>
-            <div class="contact">
-                <a href="contact.html"><span class="orangeColoredAlaphabet">C</span>ontact<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
-            </div>
+    <!--    <div class="nav-links">-->
+    <div class="menus">
+        <div class="check">
+            <a href="check.html"><span class="orangeColoredAlaphabet">C</span>heck<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
         </div>
-        <div class="nav-img">
-            <img src="../images/mypage.png" class="account-icon">
-            <img src="../images/logout.png" class="logout-icon" style="margin-left: 30px">
+        <div class="talk">
+            <a href="talk.html"><span class="orangeColoredAlaphabet">T</span>alk<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
+        </div>
+        <div class="record">
+            <a href="record.html"><span class="orangeColoredAlaphabet">R</span>ecord<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
+        </div>
+        <div class="contact">
+            <a href="contact.html"><span class="orangeColoredAlaphabet">C</span>ontact<br> <span class="orangeColoredAlaphabet">W</span>ith <span class="orangeColoredAlaphabet">U</span>s</a>
         </div>
     </div>
+    <div class="nav-img">
+        <img src="../images/mypage.png" class="account-icon">
+        <img src="../images/logout.png" class="logout-icon" style="margin-left: 30px">
+    </div>
+    <!--    </div>-->
 </nav>
 
 <div class="main">
